update starship.toml file

--- a/starship.toml
+++ b/starship.toml
@@ -33,6 +33,7 @@ $time\
 [](fg:#33658A)\
 $character\
 """
+command_timeout = 10000
 
 # Disable the blank line at the start of the prompt
 # add_newline = false
@@ -46,11 +47,6 @@ style_root = "bg:#9A348E"
 format = '[$user ]($style)'
 disabled = false
 
-# [sudo]
-# style = 'bold green'
-# symbol = '🧙 '
-# disabled = false
-
 # An alternative to the username module which displays a symbol that
 # represents the current operating system
 [os]
@@ -58,23 +54,24 @@ style = "bg:#9A348E"
 disabled = false # Disabled by default
 
 [os.symbols]
+#Macos = " "
 Macos = "🍏 "
 Windows = " "
 
 [directory]
 format = "[ 📁 $path ]($style)"
 style = "bg:#DA627D"
-truncation_length = 8
+truncation_length = 3
 truncate_to_repo = true # truncates directory to root folder if in github repo
 truncation_symbol = "…/"
 
 # Here is how you can shorten some long paths by text replacement
 # similar to mapped_locations in Oh My Posh:
-#[directory.substitutions]
-#"Documents" = "󰈙 "
-#"Downloads" = " "
-#"Music" = " "
-#"Pictures" = " "
+[directory.substitutions]
+"Documents" = "󰈙 "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
 # Keep in mind that the order matters. For example:
 # "Important Documents" = " 󰈙 "
 # will not be replaced, because "Documents" was already substituted before.
@@ -89,7 +86,7 @@ format = '[ $symbol($version) ]($style)'
 [docker_context]
 symbol = " "
 style = "bg:#06969A"
-format = '[ $symbol$context ]($style)'
+format = '[ $symbol$context]($style)'
 
 [elixir]
 symbol = " "
@@ -102,42 +99,54 @@ style = "bg:#86BBD8"
 format = '[ $symbol($version) ]($style)'
 
 [git_branch]
-symbol = " "
+#symbol = " "
+symbol = ""
+truncation_symbol = "…"
+truncation_length = 40
 style = "bg:#FCA17D"
-format = '[ $symbol $branch(:$remote_branch) ]($style)'
+format = '[ $symbol$branch(:$remote_branch) ]($style)'
 
 [git_commit]
 commit_hash_length = 7
 tag_symbol = "🏷"
 tag_disabled = false
+tag_max_candidates = 0
+only_detached = true
 style = "bg:#FCA17D"
 format = '[$hash $tag_symbol$tag]($style)'
 
 [git_state]
 style = "bg:#FCA17D"
+rebase ="REBASING"
+merge = "MERGING"
+revert = "REVERTING"
+bisect = "BISECTING"
+am = "AM"
+am_or_rebase = "AM/REBASE"
 cherry_pick = '[🍒 PICKING](bold red)'
 format = '[\($state( $progress_current of $progress_total)\)]($style) '
 
 [git_status]
-conflicted = "⚔️ "
-ahead = "↑ ×${count}"
-behind = "↓ ×${count}"
-diverged = "🔱 ×${↑ahead_count}×${↓behind_count}"
-untracked = " ×${count}"
+up_to_date = '✅'
+#up_to_date = '✓'
+conflicted = "⚔️"
+ahead = "⬆️×${count}"
+behind = "⬇️×${count}"
+diverged = "🔱×${↑ahead_count}×${↓behind_count}"
+untracked = "❔×${count}"
 stashed = "📦"
-modified = "📝 ×${count}"
-staged = "🗃️ ×${count}"
-renamed = "📛 ×${count}"
-deleted = "🗑️ ×${count}"
-up_to_date = '✓'
+modified = "📝×${count}"
+staged = "🗃️×${count}"
+renamed = "📛×${count}"
+deleted = "🗑️×${count}"
 style = "bg:#FCA17D"
-format = '[$all_status $ahead_behind]($style)'
+format = '[$all_status$ahead_behind ]($style)'
 
 [git_metrics]
 added_style = "bg:#FCA17D"
 deleted_style = "bg:#FCA17D"
 disabled = false
-format = '([+$added]($added_style))([,-$deleted]($deleted_style))'
+format = '([📊{+$added]($added_style))([,-$deleted}]($deleted_style))'
 
 
 [golang]
@@ -170,6 +179,7 @@ format = '[ $symbol ($version) ]($style)'
 detect_extensions = ['js', 'mjs', 'cjs', 'ts', 'mts', 'cts']
 detect_files = ["package.json", ".node-version"]
 detect_folders = ["node_modules"]
+not_capable_style = 'bold red'
 symbol = ""
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ($engines_version)]($style)'
@@ -184,12 +194,12 @@ detect_extensions =[ "rs" ]
 detect_files =[ "Cargo.toml" ]
 symbol = ""
 style = "bg:#86BBD8"
-format = '[ $symbol ($version) ]($style)'
+format = '[$symbol ($version) ]($style)'
 
 [scala]
 symbol = ""
 style = "bg:#86BBD8"
-format = '[ $symbol ($version) ]($style)'
+format = '[$symbol ($version) ]($style)'
 
 [python]
 python_binary = ['python', 'python3', 'python2']
@@ -202,10 +212,11 @@ format = '[${symbol} ${pyenv_prefix}(${version} )(\($virtualenv\) )]($style)'
 [terraform]
 symbol = "💠"
 style = "bg:#86BBD8"
-format = '[ $symbol $version$workspace]($style) '
+format = '[$symbol $version$workspace]($style) '
 
 [package]
 symbol = "⬢"
+#symbol = ""
 style = "bg:#86BBD8"
 format = '[$symbol $version]($style)'
 
